# doc/swagger/simple_bank.swagger.json
@@ -251,6 +251,14 @@
         }
       }
     },
+    "pbReadBlogResponse": {
+      "type": "object",
+      "properties": {
+        "blog": {
+          "$ref": "#/definitions/pbBlog"
+        }
+      }
+    },
     "pbUpdateUserRequest": {
       "type": "object",
       "properties": {
